feat: Adicionando tela de signin

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "split.it",
-    "slug": "split.it",
+    "slug": "splitit",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
